--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /Library
 /Logs
-/*.vsconfig
-/.vs/youtube/v15/*.suo
 /Packages
 /UserSettings
+/obj
+/Temp
+/.vs
+/*.vsconfig
 /*.sln
+/*.csproj
+/*.user
